--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <form id="form" class="form">
             <div class="form-control">
                 <label for="username">Username</label>
-                <input type="text" placeholder="florinpop17" id="username" />
+                <input type="text" placeholder="Username" id="username" />
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
             <div class="form-control">
                 <label for="username">Email</label>
-                <input type="email" placeholder="a@florin-pop.com" id="email" />
+                <input type="email" placeholder="test@dummy.com" id="email" />
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
